--- a/src/styles.css
+++ b/src/styles.css
@@ -82,7 +82,7 @@ body {
   font-weight: 400;
   color: var(--color-blue);
   -webkit-text-stroke: var(--color-red) 0.5px;
-  font-size: 100px;
+  font-size: 500%;
   line-height: 105%;
 }
 
@@ -95,7 +95,7 @@ body {
 
 .roles {
   font-family: Goudy, sans-serif;
-  font-size: 30px;
+  font-size: 170%;
   font-weight: 1000;
   margin: 0px 0px 30px 0px;
 }
@@ -130,7 +130,7 @@ body {
 .homeSubheader {
   font-family: Goudy;
   font-weight: 1000;
-  font-size: 30px;
+  font-size: 170%;
   color: var(--color-white);
   margin: 6rem 0rem 0rem 0rem;
 }
@@ -185,7 +185,7 @@ body {
   width: 12rem;
   transform: rotate(-10deg);
   left: 0;
-  margin-left: 10rem;
+  margin-left: 8rem;
   border-radius: 10px;
 }
 
@@ -218,7 +218,7 @@ h1 {
   font-family: Horbse, sans-serif;
   font-weight: 400;
   color: var(--color-white);
-  font-size: 100px;
+  font-size: 500%;
   line-height: 105%;
   margin-top: 2rem;
   margin-bottom: 1rem;
@@ -280,7 +280,7 @@ h1 {
   justify-content: center;
   border-radius: 40px;
   background-image: url("./assets/plaid.jpg");
-  border: var(--color-blue) 2px solid;
+  border: var(--color-blue) 3px dashed;
 }
 
 .container p {
@@ -288,7 +288,7 @@ h1 {
   color: var(--color-red);
   background-color: var(--color-white);
   border-radius: 10px;
-  padding: 5px;
+  padding: 10px;
 }
 
 .subheader {
